--- a/privacy.html
+++ b/privacy.html
@@ -95,7 +95,7 @@
 
   <hr>
 
-  <p>© 2025 LogRun 開発者</p>
+  <p>© 2025 Yukio Sakakibara</p>
 
   <hr>
 
@@ -142,6 +142,7 @@
   <h2>8. Contact</h2>
   <p>📩 Email: <code>sk.info.eng@gmail.com</code></p>
 
-  <p>© 2025 LogRun Developer</p>
+  <p>© 2025 Yukio Sakakibara</p>
 </body>
 </html>
+
